src/main/java/com/example/common/error/Exception403.java
package com.example.common.error;

public class Exception403 extends RuntimeException{
   public Exception403(String msg) {
        super(msg);
    }
}
